# CnC_Tiberian_Dawn

./: .gitignore  AGENTS.md  ANIM.CPP  CMakeLists.txt  COMPAT.H  FUNCTION.H  HEAP.H  IPXCONN.CPP  NEXT_STEPS.md  NULLMGR.CPP  PROGRESS.md  RADAR.CPP  README.md  REAL.H  SDATA.CPP  STARTUP.CPP  WATCOM.H  WINSTUB.CPP  title_candidate_HTITLE.PCX
TOOLS/: udp_transport_test.cpp
src/: CHEKLIST.cpp  EDIT.cpp  FTIMER.h  GAME.cpp  GLOBALS.cpp  LAYER.cpp  LIST.cpp  MOUSEHELP.cpp  RADIO.cpp  RAND.cpp  RAND.h  SCROLL.cpp  STARTUP.cpp  TAB.cpp  TEXTBTN.cpp  TXTLABEL.cpp  VECTOR.cpp  VECTOR.h  WWLIB.cpp  aadata.cpp  abstract.cpp  adata.cpp  aircraft.cpp  alloc.cpp  anim.cpp  audio.cpp  audio_play.cpp  audio_play_stub.cpp  audio_stub.cpp  base.cpp  base_stub.cpp  bbdata.cpp  bdata.cpp  bitblt_helpers.cpp  buffer_to_page.cpp  building.cpp  bullet.cpp  cargo.cpp  ccdde.cpp  ccfile.cpp  (+189 more)
src/include/: abstract.h  aircraft.h  building.h  facing.h  fly.h  foot.h  ftimer.h  infantry.h  ipx.h  ipx95.h  ipxaddr.h  ipxconn.h  ipxgconn.h  ipxmgr.h  mission.h  radio.h  target.h  techno.h  type.h  unit.h  wwfile.h
src/include/legacy/: abstract.h  aircraft.h  audio.h  audio_stub.h  base.h  building.h  bullet.h  cargo.h  ccdde.h  cdfile.h  commlib.h  compat.h  comqueue.h  control.h  dde.h  defines.h  display.h  dos.h  dpmi.h  drive.h  error.h  error_stub.h  event.h  externs.h  field.h  foot.h  ftimer.h  function.h  fuse.h  gadget.h  getcd.h  goptions.h  gscreen.h  heap.h  help.h  house.h  ipx.h  ipx95.h  ipxaddr.h  ipxconn.h  (+55 more)
src/tests/: test_combuf.cpp  test_comms.cpp  test_comqueue.cpp  test_dial_and_door.cpp  test_dialog.cpp  test_pcx_rle.cpp
src/tools/: extract_title.cpp  inspect_cps.cpp
